fixed layering causing overlap bug

--- a/src/components/events-search/sass/_events-search.scss
+++ b/src/components/events-search/sass/_events-search.scss
@@ -3,12 +3,6 @@
     background-color: #676c7a;
     padding: 30px 0 15px;
     z-index: 2;
-    @include tablet{
-        z-index:999999;
-    }
-    @include mobile {
-        z-index:999999;
-    }
     .container {
         position: relative;
     }
@@ -31,7 +25,6 @@
             margin: 0;
             padding: 50px;
             background: #fff;
-            z-index: 999998;
             &:before {
                 content: 'Filters';
                 display: block;
@@ -502,6 +495,18 @@ body {
     // show month year switch in calendar
     &.calendar-view .events-search .views-section .date-views {
         display: block;
+    }
+
+    // ui for mobile
+    &.showfilters {
+        overflow-y: hidden;
+        .events-search {
+            z-index: 999990;
+            .select-section {
+                display: block;
+                z-index: 1;
+            }
+        }
     }
 
     // hide filters element when empty
